@@ -6,6 +6,6 @@ import Gameplay.Link.Player;
 public interface Interaction{
     public void interaction();
     default void shutDownInteraction(){
-        ((Player)ObjectManager.GetObjectManager().GetAllObjectsOfType(Player.class).getFirst()).removeInteraction();
+        ((Player)ObjectManager.GetObjectManager().GetAllObjectsOfType(Player.class).get(0)).removeInteraction();
     }
 }
